tests/spec/compile-pass/007_trust_ffi.zn
// category: compile-pass
// profile: hosted
// trust.ffi: true
// purpose: trust extern allows explicit low-level FFI boundary

module tests.pass.trustFfi;

trust extern "C" fn getpid() -> I32;

enum IoError {
    Failed,
}

fn currentPid() -> Result<I32, IoError> {
    val pid = trust {
        getpid()
    };

    if (pid < 0) {
        return Err(IoError.Failed);
    }
    return Ok(pid);
}
