tests/spec/compile-fail/153_static_dynamic_init_rejected.zn
// category: compile-fail
// stage: mvp
// milestone: M5
// profile: hosted
// trust.ffi: true
// purpose: v1 static initialization must be CTFE and cannot require runtime dynamic initialization

module tests.fail.staticDynamicInitRejected;

trust extern "C" fn getpid() -> I32;

static processId: I32 = trust { getpid() }; // expected-error[E0801]: static initializer must be CTFE; implicit dynamic static initialization is not v1
